--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,8 +2,11 @@ name: Example
 on: [push]
 jobs:
   tests:
-    name: Run domain tests
+    name: Run tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        test_path: [src/domains, src/ports, src/adapters]
 
     steps:
       - uses: actions/checkout@v4
@@ -19,6 +22,6 @@ jobs:
       - name: Install the project
         run: uv sync --all-extras --dev
 
-      - name: Run tests
+      - name: Run tests on ${{ matrix.test_path }}
         # For example, using `pytest`
-        run: uv run pytest domains -vv
+        run: uv run pytest ${{ matrix.test_path }} -vv
